# ldscore

./: PKG-INFO  README.md  pyproject.toml
ldscore/: ldsc.py  make_annot.py  munge_sumstats.py
